fix spacing

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
+  transform: -50%, -50%;
   border-style: solid;
   height: 0px;
   width: 0px;
@@ -19,6 +20,6 @@
 }
 
 @keyframes spin {
-    0% {transform: rotate(0deg); transform-origin: 57% 57%;}
-    100% {transform: rotate(360deg); transform-origin: 57% 57%;}
+  0% {transform: rotate(0deg); transform-origin: 57% 57%;}
+  100% {transform: rotate(360deg); transform-origin: 57% 57%;}
 }
